kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jjhealth-frontend-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx" # Assuming NGINX Ingress controller
spec:
  rules:
    - host: jjhealth-services.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jjhealth-frontend
                port:
                  number: 80
